# EmailTemplatesGen

./: .env.example  .gitignore  README.md  TECHNICAL_DEBT_RESOLUTION.md  app.py  pyproject.toml  requirements.txt  sharepoint_integration.py  sidebar.py  test_fixes.py
.github/: copilot-instructions.md  copilot-setup-steps.yaml
.github/workflows/: GitHubActionsPipeline.yaml  python-tests.yml
config/: config.yaml
data/processed/: clean_email_data.csv  cleaned_data.csv
data/raw/: Conference_Meetup.txt  Delivering_Annual_Impact_Factor_Report.txt  Delivering_Annual_Publishers_Report.txt  Delivering_Contractual_Notice.txt  Delivering_Royalty_Statements.txt  Editor_Search_Invitation.txt  Editorial_Board_Recruitment.txt  Impact_Factor_Initial_Announcement.txt  Industry_Initiative_Annoucement.txt  New_Editorship_Offer.txt  clean_email_data.csv  emails.csv
docs/: design_philosophy.md  faqs.md  outlook_integration.md  overview.md  roadmap.md  tech_stack.md
email_generator/: __init__.py  generator.py  outlook_integration.py  sharepoint_integration.py
issues/: README.md  issue-001-configuration-management.md  issue-002-logging-error-handling.md  issue-003-project-structure.md
logs/: .gitkeep  README.md
models/: notes.md
notebooks/: 01_data_preprocessing.ipynb  01_data_preprocessing_V2.ipynb  02_exploratory_data_analysis.ipynb  02_exploratory_data_analysis_V2.ipynb  03_model_training.ipynb  03_model_training_V2.ipynb  03_model_training_V3.ipynb  04_model_evaluation.ipynb  04_model_evaluation_V2.ipynb  05_email_template_generation.ipynb  06_outlook_integration.ipynb  Email_Template_Generation_Project.ipynb  bart_finetuning.ipynb  docx_to_txt_conversion.ipynb  gpt2_finetuning.ipynb  gpt3_generation.ipynb  gpt4_generation.ipynb  model_evaluation.ipynb  t5_finetuning.ipynb
pages/: 1_Home.py  1_Workflow.py  2_Learn.py  3_Play.py  4_Speak.py
reports/: explanation notes.docx  explanation_notes.md  feasibility_study.md  project_report_overview _customer_edition.md
reports/reports/: project_report_overview _client_edition.md
src/email_templates_gen/: __init__.py  app.py
src/email_templates_gen/config/: __init__.py  settings.py  validation.py
src/email_templates_gen/email_generator/: outlook_integration.py
src/email_templates_gen/integrations/: __init__.py  outlook.py  sharepoint.py
tests/: test_email_generator.py  test_rag_pipeline.py  test_sharepoint_integration.py
(+12 files in other folders)
