[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-templates-gen"
version = "0.1.0"
description = "AI-powered email template generation with Outlook and SharePoint integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EmailTemplatesGen Team", email = "team@emailtemplatesgen.com"}
]
keywords = ["email", "ai", "nlp", "outlook", "sharepoint", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.32.0",
    "openai>=1.13.3",
    "msal>=1.25.0",
    "requests>=2.31",
    "langchain>=0.1.9",
    "faiss-cpu",
    "tiktoken",
    "python-dotenv",
    "pydub",
    "openai-whisper",
    "streamlit-webrtc>=0.46",
    "soundfile>=0.12",
    "av>=12.0.0",
    "numpy>=1.26",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "Office365-REST-Python-Client>=2.5.0",
    "pydantic-settings",
    "structlog",
    "python-json-logger",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/natnew/EmailTemplatesGen"
Repository = "https://github.com/natnew/EmailTemplatesGen"
Issues = "https://github.com/natnew/EmailTemplatesGen/issues"

[project.scripts]
email-templates-gen = "email_templates_gen.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
